--- a/FynxV2/src/styles/driver.css
+++ b/FynxV2/src/styles/driver.css
@@ -79,6 +79,10 @@
 .driver-popover-footer button.driver-next-btn,
 button.driver-prev-btn,
 button.driver-next-btn {
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+    line-height: 44px !important;
     background-color: hsl(var(--background)) !important;
     background: hsl(var(--background)) !important;
     color: hsl(var(--foreground)) !important;
